# phantom

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.claude-plugin/: marketplace.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security-scan.yml
.planning/: ROADMAP.md  STATE.md
.planning/phases/17.1-repo-safety-gates/: 17.1-01-SUMMARY.md  17.1-02-SUMMARY.md
.planning/phases/18-bug-fixes-ux/: 18-02-SUMMARY.md  18-03-SUMMARY.md
.planning/phases/19-tech-debt-cleanup/: 19-01-SUMMARY.md  19-02-SUMMARY.md
.planning/phases/20-security-hardening/: 20-01-SUMMARY.md  20-02-SUMMARY.md  20-03-SUMMARY.md
.planning/phases/21-performance-optimization/: 21-01-SUMMARY.md  21-02-SUMMARY.md  21-03-SUMMARY.md  21-04-SUMMARY.md  21-05-SUMMARY.md
.planning/phases/22-testing-ci/: 22-01-SUMMARY.md  22-02-SUMMARY.md  22-03-SUMMARY.md  22-04-SUMMARY.md  22-05-SUMMARY.md  22-REVIEW.md  22-VERIFICATION.md
.planning/phases/24-overengineering-audit-simplification/: 24-01-SUMMARY.md  24-02-SUMMARY.md  24-03-SUMMARY.md  24-04-SUMMARY.md  24-05-SUMMARY.md
docs/workflows/: server-comparison.md  setup-guide.md  workflow-diagnostic-fix.md  workflow-full-mix.md  workflow-mastering.md  workflow-parallel-comp.md  workflow-session-setup.md  workflow-sidechain.md  workflow-vocal-chain.md
plugin/.claude-plugin/: plugin.json
scripts/: check-large-binaries.sh  check-pii.sh  pre-push
src/phantom/: __init__.py  __main__.py  _cache.py  _diagnostics.py  _profiles.py  _resample.py  _rounding.py  _utils.py  audio.py  comparison.py  dynamics.py  exceptions.py  loudness.py  masking.py  phase.py  problems.py  processing.py  separation.py  server.py  spectral.py  stereo.py
tests/: conftest.py  test_audio.py  test_cache.py  test_cli_analyze.py  test_cli_compare.py  test_cli_doctor.py  test_cli_fix.py  test_cli_formatting.py  test_cli_render.py  test_cli_separate.py  test_cli_setup.py  test_cli_setup_reaper.py  test_cli_uninstall.py  test_cli_update.py  test_comparison.py  test_dynamics.py  test_dynamics_crossvalidation.py  test_error_schema.py  test_exceptions.py  test_install.bats  test_live_cli.py  test_live_mcp.py  test_long_audio.py  test_loudness.py  test_loudness_crossvalidation.py  test_masking.py  test_models.py  test_optional_deps.py  test_phase.py  test_plugin.py  test_problems.py  test_processing.py  test_profiles.py  test_resample.py  test_separation.py  test_server.py  test_server_integration.py  test_spectral.py  test_spectral_crossvalidation.py  test_stereo.py  (+1 more)
(+48 files in other folders)
